# gufo

./: .gitmodules  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-LGPL-2.1  README.md  clippy.toml
.github/: FUNDING.yml
.github/workflows/: rust.yml
benches/: Cargo.toml  crate-exif.rs
gufo/: Cargo.toml
gufo-common/: Cargo.toml
gufo-common/src/: cicp.rs  datetime.rs  error.rs  exif.rs  field.rs  geography.rs  hardware.rs  image.rs  isobmff.rs  lib.rs  math.rs  orientation.rs  phyiscal_dimension.rs  prelude.rs  read.rs  types.rs  utils.rs  xmp.rs
gufo-common/src/field/: macros.rs
gufo-exif/: Cargo.toml  LICENSE-MPL-2.0  README.md
gufo-exif/examples/: exif-dump.rs
gufo-exif/src/: error.rs  exif.rs  high_level.rs  internal.rs  lib.rs  structure.rs
gufo-exif/src/exif/: high_level.rs
gufo-exif/src/internal/: exif_raw.rs  raw.rs  type_.rs
gufo-exif/src/internal/exif_raw/: debug.rs  decode.rs  edit.rs  lookup.rs  makernote.rs
gufo-exif/src/structure/: document.rs  entry.rs  file.rs  ifd.rs  type_.rs  util.rs
gufo-exif/src/structure/document/: high_level.rs  type_lookup.rs
gufo-exif/tests/: basic.rs  edit.rs  exif-samples.rs  high_level.rs  makernote.rs
gufo-exif/tests/utils/: mod.rs
gufo-jpeg/: Cargo.toml  README.md
gufo-jpeg/examples/: jpeg-dump.rs
gufo-jpeg/src/: encoder.rs  lib.rs  segments.rs
gufo-jxl/: Cargo.toml
gufo-jxl/src/: lib.rs  main.rs
gufo-png/: Cargo.toml  README.md
gufo-png/examples/: dump-png.rs  png-dump.rs
gufo-png/src/: chunk.rs  chunk_type.rs  error.rs  lib.rs  png.rs
gufo-svg/: Cargo.toml
gufo-svg/src/: lib.rs
gufo-tiff/: Cargo.toml  LICENSE-LGPL-2.1
gufo-tiff/src/: lib.rs
gufo-tools/: Cargo.toml
gufo-tools/src/: lib.rs
gufo-webp/: Cargo.toml  README.md
gufo-webp/examples/: webp-dump.rs
gufo-webp/src/: lib.rs
gufo-xmp/: Cargo.toml  README.md
gufo-xmp/src/: lib.rs  parsing.rs  predefined.rs
gufo/examples/: show-metadata.rs
gufo/src/: high_level.rs  image.rs  lib.rs
gufo/tests/: test.rs
supply-chain/: config.toml
tests/: Cargo.toml  crate-exif.rs  crate-jpeg.rs  gthumb.rs  jpg.rs  test-images
