[package]
name = "benches"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]

[lints]
workspace = true

[dev-dependencies]
gufo-exif.workspace = true
criterion.workspace = true
gufo-common.workspace = true
kamadak-exif.workspace = true

[[bench]]
name = "gufo-exif"
harness = false
path = "crate-exif.rs"
