[package]
name = "gufo-common"
description = "Common features used in gufo crates"
version = "1.0.1"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
chrono = { workspace = true, optional = true }
paste.workspace = true
serde = { workspace = true, optional = true }
thiserror.workspace = true
zvariant = { workspace = true, optional = true }

[features]
serde = ["dep:serde"]
chrono = ["dep:chrono"]
zvariant = ["dep:zvariant"]
