[package]
name = "gufo-exif"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
chrono = { workspace = true, optional = true }
gufo-common.workspace = true
indexmap.workspace = true
thiserror.workspace = true
tracing = { workspace = true, optional = true }
zerocopy = { workspace = true, features = ["derive"] }
ouroboros = "0.18"

[lints]
workspace = true

[features]
default = ["tracing"]
tracing = ["dep:tracing"]
chrono = ["dep:chrono", "gufo-common/chrono"]

[dev-dependencies]
gufo-jpeg.workspace = true
