[package]
name = "gufo-jpeg"
description = "Inspect JPEG image structure"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
encoder = ["dep:jpeg-encoder"]

[dependencies]
jpeg-encoder = { workspace = true, optional = true }
gufo-common.workspace = true
tracing.workspace = true
thiserror.workspace = true
