[package]
name = "gufo-jpeg"
description = "Inspect JPEG image structure"
version = "0.2.4"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
default = []
encoder = ["dep:jpeg-encoder"]

[dependencies]
gufo-common.workspace = true
indexmap.workspace = true
jpeg-encoder = { workspace = true, optional = true }
tracing.workspace = true
thiserror.workspace = true
