[package]
name = "gufo-png"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
gufo-common.workspace = true
miniz_oxide.workspace = true
hex.workspace = true
thiserror.workspace = true

[lints]
workspace = true
