[package]
name = "gufo-png"
description = "Data structure for PNG images."
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
crc32fast.workspace = true
gufo-common.workspace = true
miniz_oxide.workspace = true
hex.workspace = true
thiserror.workspace = true

[lints]
workspace = true
