[package]
name = "gufo-svg"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
xml-rs.workspace = true
gufo-common.workspace = true
thiserror.workspace = true
memchr.workspace = true

[lints]
workspace = true
