[package]
name = "gufo-svg"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
gufo-common.workspace = true
memchr.workspace = true
thiserror.workspace = true
xml.workspace = true

[lints]
workspace = true
