[package]
name = "gufo-tiff"
description = "Data structure for TIFF images."
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
gufo-common.workspace = true

[lints]
workspace = true
