[package]
name = "gufo-tools"
publish = false
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
gufo-exif = { workspace = true, features = ["chrono"] }
gufo-common.workspace = true
gufo-jpeg = { workspace = true }
gufo = { workspace = true, features = ["all-image-formats", "chrono"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
gufo-xmp.workspace = true

[lints]
workspace = true
