[package]
name = "gufo-tools"
publish = false
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
gufo = { workspace = true, features = ["all-image-formats", "chrono"] }
gufo-common.workspace = true
gufo-exif = { workspace = true, features = ["chrono"] }
gufo-jpeg = { workspace = true }
gufo-xmp = { workspace = true, features = ["tracing"] }
tracing-subscriber.workspace = true

[lints]
workspace = true
