[package]
name = "gufo-webp"
description = "Data structure for WebP images."
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
gufo-common.workspace = true
thiserror.workspace = true

[lints]
workspace = true
