[package]
version.workspace = true
name = "gufo-xmp"
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = []
chrono = ["dep:chrono"]

[dependencies]
chrono = { workspace = true, optional = true }
gufo-common.workspace = true
thiserror.workspace = true
xml-rs.workspace = true
