[package]
name = "gufo-xmp"
description = "Reading and editing for XMP data."
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = []
chrono = ["dep:chrono", "gufo-common/chrono"]

[dependencies]
chrono = { workspace = true, optional = true }
gufo-common.workspace = true
thiserror.workspace = true
xml-rs.workspace = true
