[package]
name = "gufo"
description = "Gufo"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
gufo-common.workspace = true
gufo-exif.workspace = true
gufo-jpeg.workspace = true
gufo-png.workspace = true
gufo-webp.workspace = true
gufo-xmp.workspace = true

[lints]
workspace = true
