[package]
name = "gufo"
description = "Gufo"
version.workspace = true
license.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true

[features]
default = []
chrono = [
    "dep:chrono",
    "gufo-common/chrono",
    "gufo-exif/chrono",
    "gufo-xmp/chrono",
]

[dependencies]
chrono = { workspace = true, optional = true }
gufo-common.workspace = true
gufo-exif.workspace = true
gufo-jpeg.workspace = true
gufo-png.workspace = true
gufo-webp.workspace = true
gufo-xmp.workspace = true
static_assertions.workspace = true
thiserror.workspace = true

[lints]
workspace = true

[[example]]
name = "show-metadata"
required-features = ["chrono"]
