[package]
name = "tests"
publish = false
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dev-dependencies]
gufo-exif.workspace = true
gufo-common.workspace = true
gufo-jpeg.workspace = true
gufo-xmp.workspace = true
gufo = { workspace = true, features = ["jpeg"] }

[[test]]
name = "JPEG"
path = "jpg.rs"

[[test]]
name = "gthumb"
path = "gthumb.rs"
