[package]
name = "tests"
publish = false
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dev-dependencies]
gufo-exif.workspace = true
gufo-common.workspace = true
gufo-xmp.workspace = true
gufo = { workspace = true, features = ["jpeg"] }
# JPEG
gufo-jpeg = { workspace = true, features = ["encoder"] }
jpeg-encoder.workspace = true
zune-jpeg = "0.5.0"
image = { version = "0.25.0", features = ["png", "jpeg"] }
image-compare = "0.5.0"

[[test]]
name = "JPEG"
path = "jpg.rs"

[[test]]
name = "gthumb"
path = "gthumb.rs"
