[package]
name = "tests"
publish = false
license.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dev-dependencies]
gufo = { workspace = true, features = ["jpeg"] }
gufo-common.workspace = true
gufo-exif.workspace = true
gufo-jpeg = { workspace = true, features = ["encoder"] }
gufo-xmp.workspace = true
image = { version = "0.25.0", features = ["png", "jpeg"] }
image-compare.workspace = true
jpeg-encoder.workspace = true
zune-jpeg = "0.5.0"

[[test]]
name = "JPEG"
path = "crate-jpeg.rs"

[[test]]
name = "exif"
path = "crate-exif.rs"
